@startuml
!theme plain
hide circle
skinparam linetype ortho

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  username : VARCHAR(255)
  email : VARCHAR(100)
  birth_date : DATE
  password : VARCHAR(255)
  avatar_url : TEXT
  role : VARCHAR(20)
  status : VARCHAR(20)
  auth_provider : VARCHAR(20)
  stripe_customer_id : VARCHAR(100)
  created_at : TIMESTAMP
}

entity "authors" as authors {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR(100)
  bio : TEXT
  avatar_url : VARCHAR(255)
}

entity "genres" as genres {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR(50)
}

entity "otp_codes" as otp_codes {
  * id : BIGINT <<PK>>
  --
  email : VARCHAR(100)
  otp_code : VARCHAR(6)
  purpose : VARCHAR(20)
  expiry_date : TIMESTAMP
}

entity "refresh_tokens" as refresh_tokens {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  token : VARCHAR(255)
  expiry_date : TIMESTAMP
}

entity "subscriptions" as subscriptions {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  stripe_subscription_id : VARCHAR(100)
  plan_type : VARCHAR(50)
  status : VARCHAR(50)
  current_period_start : TIMESTAMP
  current_period_end : TIMESTAMP
  cancel_at_period_end : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "transactions" as transactions {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  stripe_invoice_id : VARCHAR(100)
  stripe_payment_intent_id : VARCHAR(100)
  amount : DECIMAL(10,2)
  currency : VARCHAR(10)
  status : VARCHAR(50)
  created_at : TIMESTAMP
}

entity "stories" as stories {
  * id : BIGINT <<PK>>
  --
  title : VARCHAR(255)
  author_id : BIGINT <<FK>>
  description : TEXT
  cover_url : VARCHAR(255)
  type : VARCHAR(20)
  status : VARCHAR(20)
  age_limit : INT
  view_count : BIGINT
  average_rating : DOUBLE
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "story_genre" as story_genre {
  * story_id : BIGINT <<PK, FK>>
  * genre_id : BIGINT <<PK, FK>>
  --
}

entity "chapters" as chapters {
  * id : BIGINT <<PK>>
  --
  story_id : BIGINT <<FK>>
  chapter_number : FLOAT
  title : VARCHAR(255)
  content : LONGTEXT
  is_premium : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "chapter_images" as chapter_images {
  * id : BIGINT <<PK>>
  --
  chapter_id : BIGINT <<FK>>
  image_url : VARCHAR(255)
  order_number : INT
}

entity "follows" as follows {
  * user_id : BIGINT <<PK, FK>>
  * story_id : BIGINT <<PK, FK>>
  --
  created_at : TIMESTAMP
}

entity "ratings" as ratings {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  story_id : BIGINT <<FK>>
  score : INT
  review_text : TEXT
  created_at : TIMESTAMP
}

entity "comments" as comments {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  chapter_id : BIGINT <<FK>>
  content : TEXT
  created_at : TIMESTAMP
}

entity "notifications" as notifications {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  title : VARCHAR(255)
  message : TEXT
  target_type : VARCHAR(20)
  target_id : BIGINT
  is_read : BOOLEAN
  created_at : TIMESTAMP
}

entity "reading_progress" as reading_progress {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  story_id : BIGINT <<FK>>
  chapter_id : BIGINT <<FK>>
  last_read_page : INT
  last_read_at : TIMESTAMP
}

users ||--|| refresh_tokens
users ||--o{ subscriptions
users ||--o{ transactions
users ||--o{ follows
users ||--o{ ratings
users ||--o{ comments
users ||--o{ notifications
users ||--o{ reading_progress

authors ||--o{ stories

stories ||--o{ story_genre
genres ||--o{ story_genre

stories ||--o{ follows
stories ||--o{ ratings
stories ||--o{ chapters
stories ||--o{ reading_progress

chapters ||--o{ chapter_images
chapters ||--o{ comments
chapters ||--o{ reading_progress
@enduml